# tokengen-rs

./: Cargo.toml  README.md
.github/workflows/: linux-release.yml  macos-release.yml  release.yml  rust.yml  windows-release.yml
src/: main.rs
src/profile/: app_profile.rs  mod.rs  user_profile.rs
