[package]
name = "tokengen"
version = "0.1.0"
authors = ["Chen Xu <windoze@0d0a.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "~0.10", features = ["blocking", "json"] }
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
dirs = "~3"
chrono = "~0"
clap = "~2"
